--- a/project-infrastructure.yaml
+++ b/project-infrastructure.yaml
@@ -61,7 +61,7 @@ Parameters:
   DBName:
     Description: DB Instance Name
     Type: String
-    Default: csye6225 
+    Default: webapp-db 
   DBUserName:
     Description: DB Instance UserName
     Type: String
@@ -74,6 +74,18 @@ Parameters:
     Description: Environment Name
     Type: String
     Default: dev
+  CodeDeployBucket:
+    Description: CodeDeployBucket 
+    Type: String
+    Default: codedeploy.prod.gautam.me
+  LambdaBucketName:
+    Description: LambdaDeployBucket 
+    Type: String
+    Default: lambda.prod.gautam.me
+  CertificateArn:
+    Description: SSLCertificateArn 
+    Type: String
+    Default: arn:aws:acm:us-east-1:960807583305:certificate/0eb610ff-ff9a-40d6-90a5-cb8760e4afcb
   
 
 Resources:
@@ -353,3 +365,366 @@ Resources:
             # - !Join ['', ['arn:aws:s3:::',!Ref CodeDeployBucket]]
       Roles:
       - !Ref CodeDeployEC2ServiceRole
+
+  CodeDeployEC2ServiceRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: CodeDeployEC2ServiceRole
+      Description: IAM Role for WebApp and S3
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - ec2.amazonaws.com
+            Action:
+              - 'sts:AssumeRole'
+      Path: /
+      ManagedPolicyArns:
+      - "arn:aws:iam::aws:policy/CloudWatchAgentAdminPolicy"
+
+  EC2InstanceProfile: 
+    Type: "AWS::IAM::InstanceProfile"
+    Properties:
+      InstanceProfileName: EC2InstanceProfile
+      Path: "/"
+      Roles:
+      - !Ref CodeDeployEC2ServiceRole
+
+  asgLaunchTemplate:
+    DependsOn:
+    - myEBSSecretKey
+    Type: AWS::EC2::LaunchTemplate
+    Properties:
+      LaunchTemplateName: !Sub '${AWS::StackName}-launch-template'
+      LaunchTemplateData:
+        BlockDeviceMappings:
+        - DeviceName: /dev/sdm
+          Ebs:
+            VolumeSize: !Ref RootVolumeSize
+            VolumeType: !Ref RootVolumeType
+            DeleteOnTermination: true
+            Encrypted: true
+            KmsKeyId: !GetAtt myEBSSecretKey.Arn
+        InstanceType: !Ref instanceType
+        KeyName: ssh_keyPair
+        ImageId: !Ref imageId
+        SecurityGroupIds:
+          - !Ref ApplicationSecurityGroup
+        IamInstanceProfile:
+          Name: !Ref EC2InstanceProfile
+        UserData:
+          Fn::Base64:
+            !Sub |
+              #!/bin/bash
+              sed -i '/scripts-user/c\ - [scripts-user, always]' /etc/cloud/cloud.cfg
+              cd /var/lib/cloud/scripts/per-boot/
+              touch reload.sh
+              cat > /var/lib/cloud/scripts/per-boot/reload.sh << 'EOF'
+                sudo pm2 reload all --update-env
+              EOF
+              cat > /etc/environment << 'EOF'
+                export USER=${DBUserName}
+                export PASSWORD=${DBPassword}
+                export DB=${DBName}
+                export HOST=${RDSInstance.Endpoint.Address}
+                export AWS_BUCKET_REGION=${AWS::Region}
+                export AWS_BUCKET_NAME="${AWS::StackName}.${S3BucketName}.${envName}.gautam.me"
+              EOF
+              source /etc/profile
+              cd /home/ec2-user/webservice
+              rm -rf node_modules
+              sudo npm i
+              sudo systemctl enable myapp
+              sudo systemctl start myapp
+              sudo pm2 reload all --update-env
+              sudo pm2 startOrReload ecosystem.config.js
+              sudo /opt/aws/amazon-cloudwatch-agent/bin/amazon-cloudwatch-agent-ctl -a fetch-config -m ec2 -c file:/home/ec2-user/webservice/AmazonCloudWatch-agent-config.json -s
+
+  asgWebApp:
+    Type: AWS::AutoScaling::AutoScalingGroup
+    DependsOn:
+      - RDSInstance
+      - ApplicationSecurityGroup
+    Properties:
+      AutoScalingGroupName: !Sub ${AWS::StackName}-asg
+      LifecycleHookSpecificationList:
+        - LifecycleTransition: "autoscaling:EC2_INSTANCE_LAUNCHING"
+          LifecycleHookName: "myLaunchLifecycleHook"
+          DefaultResult: "CONTINUE"
+          HeartbeatTimeout: 60
+      AvailabilityZones:
+        - !Select [ 0, !GetAZs '' ]
+        - !Select [ 1, !GetAZs '' ]
+        - !Select [ 2, !GetAZs '' ]
+      Cooldown: '60'
+      HealthCheckGracePeriod: 90
+      HealthCheckType: EC2
+      LaunchTemplate:
+        LaunchTemplateId: !Ref asgLaunchTemplate
+        Version: !GetAtt asgLaunchTemplate.LatestVersionNumber
+      MaxSize: '5'
+      MinSize: '1'
+      DesiredCapacity: '1'
+      NewInstancesProtectedFromScaleIn: false
+      Tags:
+        - Key: Application
+          Value: WebApp
+          PropagateAtLaunch: "true"
+        - Key: Name
+          Value: !Sub ${AWS::StackName}-asg
+          PropagateAtLaunch: "true"
+      TargetGroupARNs:
+        - !Ref loadBalancerTargetGroup
+      VPCZoneIdentifier:
+        - !Ref PublicSubnet1
+        - !Ref PublicSubnet2
+        - !Ref PublicSubnet3
+
+  asgCPUScaleOutPolicy:
+    Type: AWS::AutoScaling::ScalingPolicy
+    Properties:
+      AutoScalingGroupName: !Ref asgWebApp
+      AdjustmentType: ChangeInCapacity
+      ScalingAdjustment: '1'
+
+  AVGCPUOver5:
+    Type: AWS::CloudWatch::Alarm
+    Properties:
+      AlarmDescription: "AVG CPU Utilization over 5%"
+      EvaluationPeriods: 2
+      MetricName: CPUUtilization
+      Namespace: AWS/EC2
+      Period: 60
+      Statistic: Average
+      ComparisonOperator: GreaterThanThreshold
+      Threshold: 5.0
+      AlarmActions:
+        - !Ref asgCPUScaleOutPolicy
+      Dimensions:
+      - Name: AutoScalingGroupName
+        Value: !Ref asgWebApp
+
+  asgCPUScaleInPolicy:
+    Type: AWS::AutoScaling::ScalingPolicy
+    Properties:
+      AutoScalingGroupName: !Ref asgWebApp
+      AdjustmentType: ChangeInCapacity
+      ScalingAdjustment: '-1'
+
+  AVGCPUBelow3:
+    Type: AWS::CloudWatch::Alarm
+    Properties:
+      AlarmDescription: "AVG CPU Utilization below 3%"
+      EvaluationPeriods: 2
+      MetricName: CPUUtilization
+      Namespace: AWS/EC2
+      Period: 60
+      Statistic: Average
+      ComparisonOperator: LessThanThreshold
+      Threshold: 3.0
+      AlarmActions:
+        - !Ref asgCPUScaleInPolicy
+      Dimensions:
+      - Name: AutoScalingGroupName
+        Value: !Ref asgWebApp
+
+  LoadBalancerSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupName: loadBalancerSecurityGroup
+      GroupDescription: Load Balancer Security Group
+      VpcId: !Ref myVPC
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: '80'
+          ToPort: '80'
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: '443'
+          ToPort: '443'
+          CidrIp: 0.0.0.0/0
+
+  loadBalancer:
+    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
+    DependsOn:
+      - asgWebApp
+      - LoadBalancerSecurityGroup
+    Properties:
+      IpAddressType: ipv4
+      LoadBalancerAttributes:
+        - Key: idle_timeout.timeout_seconds
+          Value: '60'
+      Name: !Sub ${AWS::StackName}-load-balancer
+      Scheme: internet-facing
+      SecurityGroups: 
+      - !Ref LoadBalancerSecurityGroup
+      Subnets:
+        - !Ref PublicSubnet1
+        - !Ref PublicSubnet2
+        - !Ref PublicSubnet3
+      Tags:
+        - Key: Application
+          Value: WebApp
+        - Key: Name
+          Value: !Sub ${AWS::StackName}-load-balancer
+      Type: application
+
+  loadBalancerTargetGroup:
+    Type: AWS::ElasticLoadBalancingV2::TargetGroup
+    Properties:
+      HealthCheckIntervalSeconds: 90
+      HealthCheckPath: '/healthz'
+      HealthCheckPort: '5001'
+      HealthCheckProtocol: 'HTTP'
+      HealthCheckTimeoutSeconds: 60
+      HealthyThresholdCount: 2
+      IpAddressType: ipv4
+      Name: !Sub ${AWS::StackName}-lb-targetGroup
+      Port: 5001
+      Protocol: 'HTTP'
+      Tags:
+        - Key: Name
+          Value: !Sub ${AWS::StackName}-lb-tg
+      TargetGroupAttributes:
+        - Key: deregistration_delay.timeout_seconds
+          Value: '20'
+      TargetType: instance
+      UnhealthyThresholdCount: 2
+      VpcId: !Ref myVPC
+
+  loadBalancerListener:
+    Type: AWS::ElasticLoadBalancingV2::Listener
+    Properties:
+      DefaultActions:
+        - Type: forward
+          TargetGroupArn: !Ref loadBalancerTargetGroup
+      LoadBalancerArn: !Ref loadBalancer
+      Port: 443
+      Protocol: HTTPS
+      Certificates: 
+      - CertificateArn: !Ref CertificateArn
+
+  DNSConfig:
+    Type: AWS::Route53::RecordSetGroup
+    Properties:
+      HostedZoneName: !Join ['', [!Ref envName,'.gautam.me.' ]]
+      RecordSets:
+      - Name: !Join ['', [!Ref envName,'.gautam.me.' ]]
+        Type: A
+        AliasTarget:
+          HostedZoneId: !GetAtt 'loadBalancer.CanonicalHostedZoneID'
+          DNSName: !GetAtt 'loadBalancer.DNSName'
+
+  GHUploadToS3:
+    Type: AWS::IAM::Policy
+    Properties:
+      PolicyName: GH-Upload-To-S3
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Action:
+            - 's3:PutObject'
+            - 's3:Get*'
+            - 's3:List*'
+            Resource: 
+            - !Join ['', ['arn:aws:s3:::',!Ref CodeDeployBucket,'/*']]
+      Users:
+      - ghactions-app
+
+  GHCodeDeploy:
+    Type: AWS::IAM::Policy
+    Properties:
+      PolicyName: GH-Code-Deploy
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Action:
+            - "codedeploy:RegisterApplicationRevision"
+            - "codedeploy:GetApplicationRevision" 
+            Resource: 
+            - !Sub 'arn:aws:codedeploy:${AWS::Region}:${AWS::AccountId}:application:web-application'
+          - Effect: Allow
+            Action:
+            - "codedeploy:CreateDeployment"
+            - "codedeploy:GetDeployment" 
+            Resource: 
+            - !Sub 'arn:aws:codedeploy:${AWS::Region}:${AWS::AccountId}:deploymentgroup:csye6225-webapp/webapp-deployment'
+          - Effect: Allow
+            Action:
+            - "codedeploy:GetDeploymentConfig"
+            Resource: 
+            - !Sub 'arn:aws:codedeploy:${AWS::Region}:${AWS::AccountId}:deploymentconfig:CodeDeployDefault.OneAtATime'
+            - !Sub 'arn:aws:codedeploy:${AWS::Region}:${AWS::AccountId}:deploymentconfig:CodeDeployDefault.HalfAtATime'
+            - !Sub 'arn:aws:codedeploy:${AWS::Region}:${AWS::AccountId}:deploymentconfig:CodeDeployDefault.AllAtOnce'
+      Users:
+      - ghactions-app
+
+  ghec2ami:
+    Type: AWS::IAM::Policy
+    Properties:
+      PolicyName: gh-ec2-ami
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Action:
+            - "ec2:AttachVolume"
+            - "ec2:AuthorizeSecurityGroupIngress"
+            - "ec2:CopyImage"
+            - "ec2:CreateImage"
+            - "ec2:CreateKeypair"
+            - "ec2:CreateSecurityGroup"
+            - "ec2:CreateSnapshot"
+            - "ec2:CreateTags"
+            - "ec2:CreateVolume"
+            - "ec2:DeleteKeyPair"
+            - "ec2:DeleteSecurityGroup"
+            - "ec2:DeleteSnapshot"
+            - "ec2:DeleteVolume"
+            - "ec2:DeregisterImage"
+            - "ec2:DescribeImageAttribute"
+            - "ec2:DescribeImages"
+            - "ec2:DescribeInstances"
+            - "ec2:DescribeInstanceStatus"
+            - "ec2:DescribeRegions"
+            - "ec2:DescribeSecurityGroups"
+            - "ec2:DescribeSnapshots"
+            - "ec2:DescribeSubnets"
+            - "ec2:DescribeTags"
+            - "ec2:DescribeVolumes"
+            - "ec2:DetachVolume"
+            - "ec2:GetPasswordData"
+            - "ec2:ModifyImageAttribute"
+            - "ec2:ModifyInstanceAttribute"
+            - "ec2:ModifySnapshotAttribute"
+            - "ec2:RegisterImage"
+            - "ec2:RunInstances"
+            - "ec2:StopInstances"
+            - "ec2:TerminateInstances"
+            Resource: 
+            - "*"
+      Users:
+      - ghactions-app
+
+  CodeDeployServiceRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: CodeDeployServiceRole
+      Description: CodeDeployServiceRole
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - codedeploy.amazonaws.com
+            Action:
+              - 'sts:AssumeRole'
+      Path: /
+      ManagedPolicyArns:
+      - "arn:aws:iam::aws:policy/service-role/AWSCodeDeployRole"
+
