Added sns topic and lambda to cf

--- a/project-infrastructure.yaml
+++ b/project-infrastructure.yaml
@@ -728,3 +728,225 @@ Resources:
       ManagedPolicyArns:
       - "arn:aws:iam::aws:policy/service-role/AWSCodeDeployRole"
 
+  Webappv12:
+    Type: AWS::CodeDeploy::Application
+    Properties: 
+      ApplicationName: Webappv12
+      ComputePlatform: Server
+
+  Webappv12Deployment:
+    Type: AWS::CodeDeploy::DeploymentGroup
+    DependsOn:
+      - asgWebApp
+    Properties:
+      ApplicationName: webappv12
+      DeploymentGroupName: webappv12-deployment
+      ServiceRoleArn: !GetAtt CodeDeployServiceRole.Arn
+      AutoScalingGroups:
+      - !Sub ${AWS::StackName}-asg
+      DeploymentStyle:
+        DeploymentOption: WITHOUT_TRAFFIC_CONTROL
+        DeploymentType: IN_PLACE
+      Ec2TagSet:
+        Ec2TagSetList:
+        - Ec2TagGroup:
+          - Key: Application
+            Value: WebApp
+            Type: KEY_AND_VALUE
+      AutoRollbackConfiguration:
+        Enabled: true
+        Events: 
+          - DEPLOYMENT_FAILURE
+
+  CWErrLogGroup: 
+    Type: AWS::Logs::LogGroup
+    Properties: 
+      LogGroupName : webapp-err.log
+      RetentionInDays: 7
+
+  CWErrLogStream: 
+    Type: AWS::Logs::LogStream
+    DependsOn: CWErrLogGroup
+    Properties: 
+      LogGroupName: "webapp-err.log"
+      LogStreamName: "webapp-error-logs"
+
+  CWOutLogGroup: 
+    Type: AWS::Logs::LogGroup
+    Properties: 
+      LogGroupName : webapp-out.log
+      RetentionInDays: 7
+
+  CWOutLogStream: 
+    Type: AWS::Logs::LogStream
+    DependsOn: CWOutLogGroup
+    Properties: 
+      LogGroupName: "webapp-out.log"
+      LogStreamName: "webapp-out-logs"
+
+  DynamoDBTable:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      TableName: TokenTable
+      BillingMode: PROVISIONED
+      AttributeDefinitions:
+        - AttributeName: username
+          AttributeType: S
+      KeySchema:
+        - AttributeName: username
+          KeyType: HASH
+      ProvisionedThroughput:
+        ReadCapacityUnits: 1
+        WriteCapacityUnits: 1 
+      TimeToLiveSpecification:
+        AttributeName: ttl
+        Enabled: true
+      Tags:
+      - Key: DynamoDBTableName
+        Value: !Sub '${AWS::StackName}-dynamoDB-table'
+
+  EmailListTbl:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      TableName: EmailListTbl
+      BillingMode: PROVISIONED
+      AttributeDefinitions:
+        - AttributeName: username
+          AttributeType: S
+      KeySchema:
+        - AttributeName: username
+          KeyType: HASH
+      ProvisionedThroughput:
+        ReadCapacityUnits: 1
+        WriteCapacityUnits: 1 
+      Tags:
+      - Key: DynamoDBTableName
+        Value: !Sub '${AWS::StackName}-EmailListTbl'
+  
+  SNSTopic:
+    Type: AWS::SNS::Topic
+    DependsOn:
+      - LambdaFunction
+    Properties:
+      DisplayName: UserVerificationTopic
+      TopicName: UserVerificationTopic
+      Subscription:
+        - Endpoint: !GetAtt LambdaFunction.Arn
+          Protocol: lambda
+      Tags:
+        - Key: Name
+          Value: !Sub '${AWS::StackName}-sns-topic'
+
+  LambdaSNSPermission:
+    Type: AWS::Lambda::Permission
+    DependsOn:
+      - SNSTopic
+    Properties: 
+      Action: lambda:InvokeFunction
+      FunctionName: !GetAtt LambdaFunction.Arn
+      Principal: sns.amazonaws.com
+      SourceAccount: !Ref 'AWS::AccountId'
+      SourceArn: !Ref SNSTopic
+
+  LambdaExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - lambda.amazonaws.com
+            Action:
+              - 'sts:AssumeRole'
+      Path: /
+      RoleName: lambda-execution-role
+      ManagedPolicyArns:
+        - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+  
+  GHLambdaS3Policy:
+    Type: AWS::IAM::Policy
+    DependsOn:
+      - LambdaFunction
+    Properties:
+      Users:
+        - lambda-user
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Action:
+              - "s3:GetObject"
+              - "s3:ListBucket"
+              - "s3:PutObject"
+            Resource:
+              - !Sub arn:aws:s3:::${LambdaBucketName}/
+              - !Sub arn:aws:s3:::${LambdaBucketName}/*
+          - Effect: Allow
+            Action:
+              - "lambda:GetFunction"
+              - "lambda:UpdateFunctionCode"
+            Resource:
+              - !GetAtt LambdaFunction.Arn
+      PolicyName: "GHLambdaS3Policy"
+
+  LambdaPolicy:
+    Type: AWS::IAM::Policy
+    DependsOn:
+      - SNSTopic
+      - DynamoDBTable
+      - EmailListTbl
+    Properties:
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Action:
+              - "dynamodb:GetItem"
+              - "dynamodb:PutItem"
+              - "dynamodb:UpdateItem"
+            Resource:
+              - !GetAtt DynamoDBTable.Arn
+              - !GetAtt  EmailListTbl.Arn
+          - Effect: Allow
+            Action:
+              - "ses:SendEmail"
+              - "ses:SendRawEmail"
+            Resource:
+              - !Sub arn:aws:ses:${AWS::Region}:${AWS::AccountId}:identity/${envName}.gautam.me
+          - Effect: Allow
+            Action:
+              - "sns:ListTopics"
+              - "sns:CreateTopic"
+              - "sns:GetTopicAttributes"
+              - "sns:Publish"
+              - "sns:ConfirmSubscription"
+            Resource:
+              - !Ref SNSTopic
+      PolicyName: "LambdaPolicy"
+      Roles:
+        - !Ref LambdaExecutionRole
+        - !Ref CodeDeployEC2ServiceRole
+
+  LambdaFunction:
+    Type: AWS::Lambda::Function
+    DependsOn:
+      - LambdaExecutionRole
+    Properties:
+      Code:
+        ZipFile: exports.emailVerification = function (event, context, callback){ console.log('Lambda access test'); callback(null, "Success!"); }
+      Description: Lambda function for verification emails
+      Environment:
+        Variables:
+          DomainName: !Sub ${envName}.gautam.me
+      FunctionName: emailVerification
+      Handler: emailVerification.emailVerification
+      MemorySize: 128
+      PackageType: Zip
+      Role: !GetAtt LambdaExecutionRole.Arn
+      Runtime: nodejs14.x
+      Tags:
+        - Key: Name
+          Value: !Sub ${AWS::StackName}-lambdaFunction
+      Timeout: 15
